2008-10-31  John Finlay  <finlay@moeraki.com>

	* codegen/__init__.py (__all__): Add defsgen to __all__ list.

	* codegen/h2def.py (find_enum_defs): Strip out # directives from
	enum defintions.
	(clean_func): Change ' * G_CONST_RETURN * ' to '** '

	* codegen/Makefile.am (codegen_PYTHON): Add defsgen.py

	* codegen/defsgen.py (typecode): Use the passed in prefix as a
	hint when creating a typecode.
	(split_prefix,write_enum_defs,_write_obj_helper): Add function to
	use passed in prefix as a hint when splitting an object name into
	module and name.

	* codegen/h2def.py (DefsWriter.write_enum_defs): Make sure the
	prefix ends with a _ i.e. really handle the GDK_FONT_FONT,
	GDK_FONT_FONTSET case.

2008-09-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/goutputstream.override
	(g_output_stream_write_all): use gsize instead of gssize.

2008-09-10  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 530935 – pygobject_set_properties doesnt release the GIL

	* gobject/pygobject.c (pygobject_set_properties): Reuse
	set_property_from_pspec() which release GIL for us.  Also make
	sure that g_object_thaw_notify() is called even after error.

2008-09-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 549517 – add __repr__ to gio.Drive, gio.Mount and gio.Volume

	* gio/gio.override (_wrap_g_drive_tp_repr, _wrap_g_mount_tp_repr):
	New functions.

	* gio/gvolume.override (_wrap_g_volume_tp_repr): New function.

2008-09-09  Loïc Minier  <lool@dooz.org>

	Bug 551227 – Missing AC_CONFIG_MACRO_DIR([m4])

	* configure.ac: Add AC_CONFIG_MACRO_DIR.

2008-09-08  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 551056 – make codegen not import when corresponding argument
	types are not registered

	* codegen/override.py (import_pat): Add support for optional 'for'
	clause.
	(Overrides.__parse_override): Handle it.

	* codegen/codegen.py (SourceWriter.write_imports)
	(SourceWriter.write_object_imports): Adapt for changes in
	get_imports() return value.
	(is_registered_object): New function.
